--- a/UCC-TRMS/users.resx
+++ b/UCC-TRMS/users.resx
@@ -117,7 +117,90 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="Guna2Elipse1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnAddUser.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gQCDzAKZ4+kpAAAAdtJREFU
+        WEfVl8suQ0Ech7txCxK8gAQr5QWEnY3WXuJFbGvFhmhcmnoBlvYuibBhWx4BW7dEIqjvd+Z/5CS0OTPn
+        hPiSL+f6/81kZjptC/+OZrM5iVW8wmdT5xs4Ya/lD+FduIPv2Io33MJOK8sHAtX4CablGPPrBGG1KNaP
+        TSvPBkGa83bD3gpNR9FiwiFECy6UdYsJh5BrlxVEw2LCIeTJZQXxaDHhKMRlBfFgMeEQ8udToB0ulDWL
+        CYeQCdRHyhfVjFtMNgjS9upL1cqzQ1gnHkWx6TjEDivPBwLViU1sNx16po0r98bH7FTnRVzHBmqPkDpf
+        w3zmPIbAbtzGDzzAYXvUEt7ps9NsEDSE55jkFfdwEUexF9XJEVzAfaxZ/Tw+YDkK9IGiHjzDECqWUXGX
+        7toLivTLx4dbrOMqzlpGWAcomEHNeVoucMDKv+BecAdOXV1qpqxOc76UUHuB0DF5v/Wa4KG2XV/6rVYL
+        Lg33UWM/wcNl944X8QiUUGsgNv4E6Zi8Pxc19hM8jIfNh0sctIgvuOe/Bnj5xtV4c4e7qDmetqygDry4
+        mkxEDeroLn9nBJLULauMWpilKDwNvLyCWdGm9G1NpIJCfeWqE1lHQgtzGvP9j5g/hcInvMJ7H4L+hmYA
+        AAAASUVORK5CYII=
+</value>
+  </data>
+  <metadata name="id.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
   </metadata>
+  <metadata name="username.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Edit.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <data name="Edit.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAALAAAACwARRqq2kAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAABh0lEQVRIS62VsUrDQByHo88g6iKIoA6KOKn4BtVB9AFcXURBQR26CYoPUNTBoeJqB5E6iCAIpU2h
+        pSJotWkTaRqlNk1TqFiKf++S06Fe0+slP/iWJPd9yRTB64Eysw3KdBWxQy55N/3Zd4DEgGk8DEMjNXhF
+        brmf71DfCl4H/uT1aA/Uxd5v6yYAdJVqtQHDMIZ4WD7V931HOmBC4U1bjkBfEBb0anX8wzQzJdMEHk4i
+        hiXGTO4WoG8tC7fhJSiLEzHr7dFDkeZDrASj/+WYUX/+xpLjoQfrzQdZaCWf2ssniNoe7XA7WskXA6+Q
+        1rQ5orZHEzjhJI9lMu4C7eSuAixy7sDFfYVJzh3YCJWZ5FyB7HsF5o/Z5JiOA6GkYcn717Mw5pdh9Uym
+        in/pOHCXLsBKUIbzuEQVNtNR4EXTqBInmAM8cgxTgFeOaRtwI8c4BtzKMbTAp1dyzKOqzhK1PSS/9Eqe
+        yOW+0O+3m6jtScXiSEpR3kTKAVZESYKkLFeeVHWBaMkE4QePLh1sKgYimgAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <metadata name="Delete.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <data name="Delete.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gQBBQ4QxApsmwAAAiRJREFU
+        SEvtlMFL3EAYxaPrhlUKgmAUETzoQRSh4B+Qy4JGdkk22Wx0F3sodHvoXRBaox5UpOfe9S4tQou9FVoQ
+        QWxPRUp7FEsrvYiIoHn9ZpxoNtnsxoM3HzwyIfl+b/JNZqQ4ua7bls/n13O53GvbtmWMjDyCovxCKgX0
+        9n6DqraJV+8ugnZomnaUzWbBbE5MHKGr6xiShBsryg/x+t1UrVbThmHsMbCu62uVycmV056eixo4syxf
+        YWAgI8qSidrSWi6Xt8gXlmW94G0Jz5w5nfYwODgrypKrUqkUCQ66FsD6Pja2H4HLsoehobIokeC6/Vha
+        ek7XbSwunpE/ikdREdihAO+Z4+SoP+9gGMDwcN2ZY3lZJdhXMiKmTnBgWPS3pJ7MzOwcmuZvDvfNQkJt
+        IciHunDmuADeFn/mtT6l33KenrGVv3apdIhiEXUd9wsTaDMEjnd3d+3aBD0+nhbIWlHhWQgUvr91o4AG
+        X/AmADkJ3cMLjK8U5QbotbQkDKBFpuJN6vEf8mMUCgs+cNu2seo4fLxLfXY0jcO+d3aioKo4Z0dIswBf
+        oN3Mr4GAjVIJc9PTfPyeAvJTUxz2hb6E7fp/spw8wNdDQFM9BDTV/Qfo+is/4MCy8JY2Gxv/NE28pM3F
+        YMft7VgdHcVlcDcnDjCMp35AxHFnUSZzKcqbi1qkEOxvBN4ooK/vsyhPJn4m6fon8nnDAJo5g9NR3SFK
+        SZL0H/P6FM7HFpLsAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="DataGridViewImageColumn2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gQBBQ4QxApsmwAAAiRJREFU
+        SEvtlMFL3EAYxaPrhlUKgmAUETzoQRSh4B+Qy4JGdkk22Wx0F3sodHvoXRBaox5UpOfe9S4tQou9FVoQ
+        QWxPRUp7FEsrvYiIoHn9ZpxoNtnsxoM3HzwyIfl+b/JNZqQ4ua7bls/n13O53GvbtmWMjDyCovxCKgX0
+        9n6DqraJV+8ugnZomnaUzWbBbE5MHKGr6xiShBsryg/x+t1UrVbThmHsMbCu62uVycmV056eixo4syxf
+        YWAgI8qSidrSWi6Xt8gXlmW94G0Jz5w5nfYwODgrypKrUqkUCQ66FsD6Pja2H4HLsoehobIokeC6/Vha
+        ek7XbSwunpE/ikdREdihAO+Z4+SoP+9gGMDwcN2ZY3lZJdhXMiKmTnBgWPS3pJ7MzOwcmuZvDvfNQkJt
+        IciHunDmuADeFn/mtT6l33KenrGVv3apdIhiEXUd9wsTaDMEjnd3d+3aBD0+nhbIWlHhWQgUvr91o4AG
+        X/AmADkJ3cMLjK8U5QbotbQkDKBFpuJN6vEf8mMUCgs+cNu2seo4fLxLfXY0jcO+d3aioKo4Z0dIswBf
+        oN3Mr4GAjVIJc9PTfPyeAvJTUxz2hb6E7fp/spw8wNdDQFM9BDTV/Qfo+is/4MCy8JY2Gxv/NE28pM3F
+        YMft7VgdHcVlcDcnDjCMp35AxHFnUSZzKcqbi1qkEOxvBN4ooK/vsyhPJn4m6fon8nnDAJo5g9NR3SFK
+        SZL0H/P6FM7HFpLsAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="DataGridViewImageColumn1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        qAAAAKgBefSzxgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAGHSURBVEhLrZWx
+        SsNAHIejzyDqIoigDoo4qfgG1UH0AVxdREFBHboJig9Q1MGh4moHkTqIIAilTaGlImi1aRNpGqU2TVOo
+        WIp/75LToV7T6yU/+JYk933JFMHrgTKzDcp0FbFDLnk3/dl3gMSAaTwMQyM1eEVuuZ/vUN8KXgf+5PVo
+        D9TF3m/rJgB0lWq1AcMwhnhYPtX3fUc6YELhTVuOQF8QFvRqdfzDNDMl0wQeTiKGJcZM7hagby0Lt+El
+        KIsTMevt0UOR5kOsBKP/5ZhRf/7GkuOhB+vNB1loJZ/ayyeI2h7tcDtayRcDr5DWtDmitkcTOOEkj2Uy
+        7gLt5K4CLHLuwMV9hUnOHdgIlZnkXIHsewXmj9nkmI4DoaRhyfvXszDml2H1TKaKf+k4cJcuwEpQhvO4
+        RBU201HgRdOoEieYAzxyDFOAV45pG3AjxzgG3MoxtMCnV3LMo6rOErU9JL/0Sp7I5b7Q77ebqO1JxeJI
+        SlHeRMoBVkRJgqQsV55UdYFoyQThB48uHWwqBiKaAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
