--- a/UCC-TRMS/SplashScreen.resx
+++ b/UCC-TRMS/SplashScreen.resx
@@ -117,79 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="Guna2Elipse1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
+  <metadata name="Timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>5, 19</value>
   </metadata>
-  <metadata name="Column1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="title.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="OBJECTIVES.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="SCOPE.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="LIMITATION.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="TEAMNAME.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="MEMBERS.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="PANEL.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="CATEGORY.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnProcess.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gQCDxciiP++OwAAApFJREFU
-        WEftl7lrFUEcx5+JIMELESGdRSCJmniBAXOIhSIxnSZewSq2YiOS1sTGfyFH5UEUISpiJ6KIhRIEQSxT
-        WHiBlQeK+vx8d35xdyezcXffsxE/8IHZOX4zb2Zndl7lP0WpVquNuA0HcMRUeis2WLX6Q/A+nMZ3mMVb
-        nMIea1Y7BNuCd7Aot7DdwpSDAEP4SdFK8gWHLVwxaDiKPxUlJ99R78KD6ClGMc5a2HzQ4Jg19FGeluM4
-        brS6y5XGAXtehaFBDKr8j1BRa/5ZrTxeYBc24D68iNdxxtK/15u0BvEUk3zENquSDZVCL9x9XI17UAMJ
-        ccDaa4A78aEyPWajTrKggraaz0tcgydR65yFBnkN30dP2XRbd4uhUPs8idauF3vwmzLqwIR1l4YCnXA6
-        SJLcw2X4PHoqzn7UzCR5jYtPTDJ1vPromN3rkqXQ7A27ZIoO6zaGTO1hn814wSVLMYYtLpmi37qNIfOU
-        K0uxFq+6ZCku4QqXTDFi3caQGRrAOrzikqXQAJpcMkVwAKEl2IGaxrKcx1aXTBFcgtBLeBq1BcuitqGZ
-        7bRuY8gMbcNn2O+ShZmzuP534Q2GLy4U6DJRD76ivhv6ZviEDyJBofbtUnzAG3g3egqjE/MobsB5ZXhk
-        H8WCCrddvRSPcBc2Wp2Dygwwh/rlzfhEGR5Lf4wElTahfwt6jE1WRXXacBwvo84J7RTNno5t7aZX6JPv
-        cyyoeAT9C4m+Cyut/ARq16xHTfV2PIMaaAjFOhwFzwsNzlnDJHqjD+GP6CkfilHsSrYADQexlkuppr3Y
-        L/chQDveVLSCzGKrhakdgulUm0QdJFmobAJ3W7P6Q3Dd+TpRb/vCXzNtyw78e3/N/lEqlV8aQfvap/c8
-        iAAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="tbSearchThesis.IconRight" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAB
-        1wAAAdcBjJIIaAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAASDSURBVHhe7dtH
-        yCRFHIbxb42Y0xowiwt6NBxMB3M4iPFgOrjLmjGtinpQEBEDelBEPZkVTKgHPSmIitldURQToqgHc875
-        ecCG8eNfPdPd1TO1n/PCj4WFra6p6am8MxmzInbBubgFz+ID/IC///3zC7yOR3E1jsQmWG6zAvbFnfgS
-        ftCm/sRzOA8bYbnIyjgR7yH6UG39gluxPYrNYXgf0QfI5XfcgA1RTDbGw4gq3JfPcCgmnj3wMaJKjsNN
-        8Gc3kRyH3xBVLOUj+LbY01+Ak3E2LsLNcIT4FdG/TXkM62KsseL20lGFZnsN9uTbYpSshoNwO6qhcphX
-        sB7GkqPxF6KKDHoa+6NL5uMSfI/oGYMcMtdEr9kdPyOqQMVJjT+PeciVzfAAoucNegg5n/ufbIBhHZ7f
-        +uboKyfBOUH07Ip9Sy+5F9EDK3Zu/n77zl74BlEd5FxhR2TN4YgeVrkfzvnHlV3xI6K66Hk4Hc8Sx9l3
-        ED1IT2FVjDsHo24kOh5ZcgqiB+hzbIpJ5UpE9dK7WAmdYo/6FqIH6ChMMr6dbyCqm45BpzghiQrWEygh
-        +yGqnx5Hp9yGqGDtiVLi8BvV0T5iK7SKr1dqM+NllBSX4lE9dRpaxVlfVKDOQklZBakvy/lJqyxBVKC2
-        QGm5A1FdnZq3yt2ICnS7q8QsRlRftRqqXZtHhd2HErMDovrKkaJx3LyICrscJcalcGqZ7uq0cVJz7TNR
-        alJ1btVpp7amTkCp+QRRnc9H47isjAo7FaXmK0R1dkRrnE8RFdbbhkPHuPzN+qWlFhluRZeYLRHVV4eg
-        cR5BVNiTKDEHIqqvWu0QpdbaP2ESGyDDcimi+np2sToax+3vqEB58lta3AaL6roMreIBZGrLyVOckrIN
-        UpOg69E6LyEq1IOK9VFKrkBUT3V6W89BVKguRgnxXDC1Te6eZad9QW9mpA5Av8MkN0SrXIuofroKneM1
-        l6hweR4wyeyE1OTnD7TeDhvMdrCw6CHySswkshbqzivcz8wWe/3oIfKsbm+MM/6uvVEW1UeuCrOeUXow
-        6rWU6GH6FrthHPHD1/0s5YWL7KmbGMlWbzXnbhBf+7pvXk6IOp8IpXIjoodWnIzY8/Zxb8cOr+43X/Ew
-        p7e4BkgdQgx6EwcgR7z64lCX6u1ncytvAXrLOliK6OGzPQOvvbZZPHmnyLfJ/iUqu07vjeDdnRcRPTzy
-        Ne6CQ6av8toYjJsZW8PX9zK8gKicJnpvBJeYDyJ6+ChcVruFldrGyqH3RvCbuxBN7wvm4BvoJsiHA38X
-        6b0RjK91k59EFw63jvPVSGNfUUQj+DYsQu6b4hVHAS9PRvP7YhrBOAk5Fl6gGOVC5TDOQK+Bmx51KaoR
-        qtiznw43WF2bR5WazYXXq7gOziU8+h41RTbCYGyQfbAQXpL2jEFexDoCO2MNdEnxjTCO2E8M+88b00bA
-        tBEwbQRMGwHTRsCcb4RRh0j/g8aczSiNUOpFsGwZ1ggu0ed86voEr9r/L5JqhJJvwmWP55v3wLvGb+OM
-        mZmZef8AgSMtP3XdhBwAAAAASUVORK5CYII=
-</value>
-  </data>
 </root>
