--- a/UCC-TRMS/thesis.resx
+++ b/UCC-TRMS/thesis.resx
@@ -209,4 +209,36 @@
         SZL0H/P6FM7HFpLsAAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="ContextMenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>142, 17</value>
+  </metadata>
+  <data name="DeleteToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gQBBQ4QxApsmwAAAiRJREFU
+        SEvtlMFL3EAYxaPrhlUKgmAUETzoQRSh4B+Qy4JGdkk22Wx0F3sodHvoXRBaox5UpOfe9S4tQou9FVoQ
+        QWxPRUp7FEsrvYiIoHn9ZpxoNtnsxoM3HzwyIfl+b/JNZqQ4ua7bls/n13O53GvbtmWMjDyCovxCKgX0
+        9n6DqraJV+8ugnZomnaUzWbBbE5MHKGr6xiShBsryg/x+t1UrVbThmHsMbCu62uVycmV056eixo4syxf
+        YWAgI8qSidrSWi6Xt8gXlmW94G0Jz5w5nfYwODgrypKrUqkUCQ66FsD6Pja2H4HLsoehobIokeC6/Vha
+        ek7XbSwunpE/ikdREdihAO+Z4+SoP+9gGMDwcN2ZY3lZJdhXMiKmTnBgWPS3pJ7MzOwcmuZvDvfNQkJt
+        IciHunDmuADeFn/mtT6l33KenrGVv3apdIhiEXUd9wsTaDMEjnd3d+3aBD0+nhbIWlHhWQgUvr91o4AG
+        X/AmADkJ3cMLjK8U5QbotbQkDKBFpuJN6vEf8mMUCgs+cNu2seo4fLxLfXY0jcO+d3aioKo4Z0dIswBf
+        oN3Mr4GAjVIJc9PTfPyeAvJTUxz2hb6E7fp/spw8wNdDQFM9BDTV/Qfo+is/4MCy8JY2Gxv/NE28pM3F
+        YMft7VgdHcVlcDcnDjCMp35AxHFnUSZzKcqbi1qkEOxvBN4ooK/vsyhPJn4m6fon8nnDAJo5g9NR3SFK
+        SZL0H/P6FM7HFpLsAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="EditToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        rQAAAK0BVE7WMAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAGHSURBVEhLrZWx
+        SsNAHIejzyDqIoigDoo4qfgG1UH0AVxdREFBHboJig9Q1MGh4moHkTqIIAilTaGlImi1aRNpGqU2TVOo
+        WIp/75LToV7T6yU/+JYk933JFMHrgTKzDcp0FbFDLnk3/dl3gMSAaTwMQyM1eEVuuZ/vUN8KXgf+5PVo
+        D9TF3m/rJgB0lWq1AcMwhnhYPtX3fUc6YELhTVuOQF8QFvRqdfzDNDMl0wQeTiKGJcZM7hagby0Lt+El
+        KIsTMevt0UOR5kOsBKP/5ZhRf/7GkuOhB+vNB1loJZ/ayyeI2h7tcDtayRcDr5DWtDmitkcTOOEkj2Uy
+        7gLt5K4CLHLuwMV9hUnOHdgIlZnkXIHsewXmj9nkmI4DoaRhyfvXszDml2H1TKaKf+k4cJcuwEpQhvO4
+        RBU201HgRdOoEieYAzxyDFOAV45pG3AjxzgG3MoxtMCnV3LMo6rOErU9JL/0Sp7I5b7Q77ebqO1JxeJI
+        SlHeRMoBVkRJgqQsV55UdYFoyQThB48uHWwqBiKaAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
